Revision history for Spreadsheet-ParseXLSX

{{$NEXT}}

0.24  2016-06-25
      - Support scalar refs as input (rshadow, #59)

0.23  2016-05-28
      - Stable release

0.22-TRIAL  2016-05-25
      - Fix some regressions around cell style application (Tux)
      - Speed up parsing of large spreadsheets

0.21-TRIAL  2016-05-23
      - Give a better error message when opening xls files (mchendriks, #52)
      - Fix parsing files with non-default XML namespace names
      - Handle files with no style information
      - Handle fills that don't specify a pattern type (vfilatov, #41)
      - Fix parsing of encrypted files on big-endian systems
        (mazurin, Tux, #50, #51)
      - Support reading files where the case is specified incorrectly (this is
        likely actually a bug in the program generating these files, but I
        don't think this fix is likely to break any real files) (Tux, #57)
      - Ensure we coerce hidden state for rows and columns to booleans
        (Jeffery Hammock)
      - Support extracting rich text formatting from cells (Carlos Alberto
        Danzos)

0.20  2015-12-05
      - Fix the test suite on perls compiled with -Duselongdouble (Slaven
        Rezić, #49)

0.19  2015-12-04
      - Support encrypted xlsx files (mazurin, #37)
      - Support absolute internal pathnames (zhouzhen1, #46)
      - Support hidden rows, columns, and sheets (ssimms, #47)

0.18  2015-09-19
      - Fix 5.8 support (rjbs, #39)
      - Fix parsing of files which have empty worksheets (for instance,
        worksheets that are only charts) (Stuart Watt, #43)

0.17  2015-03-25
      - Fix using_1904_date (f20, #31)
      - Add support for get_header, get_footer, get_margin_*, get_print_scale,
        get_paper, is_portrait, and get_start_page, and also fill in the
        BdrDiag, Rotate, Indent, and Shrink format properties (Dave Clarke,
        #35)
      - Fix JasperSoft-created files (rdboisvert, #27)
      - bump required perl version to 5.010 (zhouzhen1, #33)