@@ -9,8 +9,8 @@ use Spreadsheet::ParseXLSX;
     my $filename = 't/data/encryption-agile-123q.xlsx';
     my @inputs = (
         $filename,
-        do { open my $fh, '<', $filename or die; $fh },
-        do { open my $fh, '<', $filename or die; local $/; my $d = <$fh>; \$d },
+        do { open my $fh, '<:raw:bytes', $filename or die; $fh },
+        do { open my $fh, '<:raw:bytes', $filename or die; local $/; my $d = <$fh>; \$d },
     );
 
     my $parser = Spreadsheet::ParseXLSX->new(Password => '123q');
@@ -27,8 +27,8 @@ use Spreadsheet::ParseXLSX;
     my $filename = 't/data/encryption-standard-default-password.xlsx';
     my @inputs = (
         $filename,
-        do { open my $fh, '<', $filename or die; $fh },
-        do { open my $fh, '<', $filename or die; local $/; my $d = <$fh>; \$d },
+        do { open my $fh, '<:raw:bytes', $filename or die; $fh },
+        do { open my $fh, '<:raw:bytes', $filename or die; local $/; my $d = <$fh>; \$d },
     );
 
     my $parser = Spreadsheet::ParseXLSX->new(Password => '');
